Pausing for the day here, most bootstrap resolved, though there are remaining misalignments, and the bootstrap carousel replacing the Javascript slideshow is not fully functional yet.

--- a/main.css
+++ b/main.css
@@ -19,6 +19,7 @@ body{
     width:100vw;
     height:10vh;
     font-size:1em;
+    text-align: center;
 }
 #header{
     /* grid-area:2/1/2/1; */
@@ -56,35 +57,36 @@ button{
     justify-self: start;
     
 }
-/* .image{
+.image{
     height:38vh;
-    width:90vw;
-}  */
+    width:80vw;
+} 
 .imageTitle{
     color:white;
-    position: relative;
+    /* position: relative; */
     background-color: rgba(0, 0, 0, 0.274);
     font-size:1em;
-    width:100vw;
-    bottom:15.5vh;
+    width:80vw;
+    /* bottom:15.5vh; */
 } 
 
 .summary{
     color: white;
     background-color:rgba(0, 0, 0, 0.274);
     font-size: 1em;
-    position: relative;
-    bottom: 18.2vh;
-    text-align: start;
+    /* position: relative; */
+    /* bottom: 18.2vh; */
+    /* text-align: start; */
     width:80vw;
 }
 
 #homeText{
     /* grid-area:3/1/3/3; */
     font-size: 1em;
+    text-align: center;
     width:90vw;
-    position: relative;
-    top:19vh;
+    /* position: relative; */
+    /* top:19vh; */
 
 }
 
@@ -97,9 +99,9 @@ button{
 #slideshow{
     /* grid-area:1/1/1/2; */
     width:80vw;
-    position: relative;
-    right:10vw;
-    margin-top:-3vh;
+    /* position: relative; */
+    /* right:10vw; */
+    /* margin-top:-3vh; */
 } 
 /* slideshow controls */
 /* #next, #prev{
